MDL-40786 User profile: Fixing narrow screen RTL collapse

--- a/theme/bootstrapbase/less/moodle/responsive.less
+++ b/theme/bootstrapbase/less/moodle/responsive.less
@@ -50,15 +50,20 @@
     .form-buttons {
         padding-left: @horizontalComponentOffset980;
     }
+}
+
+@media (max-width: 873px) {
     .dir-rtl {
+        .userprofile dl.list dt,
         .userprofile dl.list dd {
-            margin-right: @horizontalComponentOffset980;
+            float: none;
+            text-align: right;
+            margin-right: 0;
         }
     }
 
 }
 
-// login page
 @media (min-width: 1200px) {
     .loginbox.twocolumns .loginpanel {
         margin-left: 0;
@@ -91,7 +96,7 @@
         .mform .fdescription.required,
         .userprofile dl.list dd,
         .form-horizontal .controls {
-            margin-right: @horizontalComponentOffset1200 - 100px;
+            margin-right: (@horizontalComponentOffset1200 - 100px);
         }
         #page-mod-forum-search .c1 {
             margin-right: @horizontalComponentOffset1200;
@@ -100,7 +105,7 @@
         .mform .fitem div.fitemtitle,
         .userprofile dl.list dt,
         .form-horizontal .control-label {
-            width: @horizontalComponentOffset1200 - 120px;
+            width: (@horizontalComponentOffset1200 - 120px);
         }
 
     }
